// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deepFindAllByKey addBlastLinksToFreeText should handle no positions 1`] = `
[
  [
    "SOME TEXT",
  ],
]
`;

exports[`deepFindAllByKey addBlastLinksToFreeText should handle positions at the beggining 1`] = `
[
  [
    <Link
      to="/blast?ids=UP_ACCESSION[10-34]"
    >
      10-34
    </Link>,
    " SOME TEXT",
  ],
]
`;

exports[`deepFindAllByKey addBlastLinksToFreeText should handle positions at the end 1`] = `
[
  [
    "SOME TEXT ",
    <Link
      to="/blast?ids=UP_ACCESSION[10-34]"
    >
      10-34
    </Link>,
  ],
]
`;
